Just another update

--- a/Python od podstaw/6. Funkcje.md
+++ b/Python od podstaw/6. Funkcje.md
@@ -9,7 +9,7 @@ def shoot_zombie():
     print("AAAAOOOUUAA!!! <gunshot>  ...")
 ```
 
-Definicja funkcji składa się z kilku elementów składowych. Na początku mamy słowo kluczowe `def`, które oznacza że definiujemy funkcję. Następnie znajduje się nazwa funkcji oraz para nawiasów okrągłych a na końcu dwukropke. To co znajdzie się poniżej we wciętym bloku kodu to ciało funkcji, czyli zestaw instrukcji, które zostaną wykonane podczas *wywołania funkcji*. Aby wywołać funkcję w dowolnym miejscu w kodzie należy napisać jej nazwę wraz z parą nawiasów okrągłych.
+Definicja funkcji składa się z kilku elementów składowych. Na początku mamy słowo kluczowe `def`, które oznacza że definiujemy funkcję. Następnie znajduje się nazwa funkcji oraz para nawiasów okrągłych a na końcu dwukropek. To co zostanie napisane poniżej we wciętym bloku kodu to ciało funkcji, czyli zestaw instrukcji, które będą wykonane podczas *wywołania funkcji*. Aby wywołać funkcję w dowolnym miejscu w kodzie należy napisać jej nazwę wraz z parą nawiasów okrągłych.
 
 Poniżej przykłady kilku podobnych funkcji wraz z wywołaniem  - tym razem strzelamy kolejno do kilku zombie:
 ```python
@@ -55,7 +55,7 @@ shoot_five_zombies()
 ```
 
 **Procedura - podsumowanie:**
-- Aby nie kopiować tego samego kodu za każdym razem kiedy chcemy z niego skorzystać może zamknąć go w funkcji i wywoływać ją wielokrotnie
+- Aby nie kopiować tego samego kodu za każdym razem kiedy chcemy z niego skorzystać może zamknąć go w funkcji i wywoływać ją w różnych miejscach
 - Funkcja, która nie zwraca żadnej wartości to procedura
 ---
 ---
