Just another update

--- a/Python od podstaw/6. Funkcje.md
+++ b/Python od podstaw/6. Funkcje.md
@@ -62,7 +62,7 @@ shoot_five_zombies()
 ---
 &nbsp;
 ### 6.2 Parametry funkcji
-W powyższych przykładach zostało napisanych kilka funkcji, które są do siebie bardzo podobne - różnią się tylko jednym szczegółem (liczbą strzałów) ale poza tym ich działanie jest identyczne. Zamiast tworzyć wszystkie te funkcji osobno wystarczy stworzyć jedną a następnie dodać jeden lub więcej *parametrów*, które pozwolą doprecyzować co dokładnie funkcja ma wykonać. Parametry podajemy wewnątrz nawiasów w definicji funkcji. Jeśli jest ich więcej niż jeden należy oddzielić je przecinkiem.
+W powyższych przykładach zostało napisanych kilka funkcji, które są do siebie bardzo podobne - różnią się tylko jednym szczegółem (liczbą strzałów) ale poza tym ich działanie jest identyczne. Zamiast tworzyć wszystkie te funkcje osobno wystarczy zdefiniować jedną a następnie dodać jeden lub więcej *parametrów*, które pozwolą doprecyzować szczegóły działania funkcji. Parametry podajemy wewnątrz nawiasów w definicji funkcji. Jeśli jest ich więcej niż jeden należy oddzielić je przecinkiem.
 ```python
 def shoot_zombie():
     print("AAAAOOOUUAA!!! <gunshot>  ...")
@@ -81,7 +81,7 @@ shoot_n_zombies(3)
 # AAAAOOOUUAA!!! <gunshot>  ...
 ```
 
-Teraz wywołując funkcję `shoot_n_zombies` wystarczyć przekazać do niej *argument*, który doprecyzuje co dokładnie wydarzy się przy jej wywołaniu.
+Teraz wywołując funkcję `shoot_n_zombies` wystarczyć przekazać do niej *argument*, którego wartość wpłynie na jej działanie.
 
 ---
 > Parametr to część definicji funkcji, która znajduje się w nawiasach między jej nazwą a dwukropkiem. Argument to wartość, którą przekazujemy do funkcji w trakcie jej wywołania
