--- a/Python od podstaw/6. Funkcje.md
+++ b/Python od podstaw/6. Funkcje.md
@@ -84,7 +84,7 @@ shoot_n_zombies(3)
 Teraz wywołując funkcję `shoot_n_zombies` wystarczyć przekazać do niej *argument*, którego wartość wpłynie na jej działanie.
 
 ---
-> Parametr to część definicji funkcji, która znajduje się w nawiasach między jej nazwą a dwukropkiem. Argument to wartość, którą przekazujemy do funkcji w trakcie jej wywołania
+> Parametry to część definicji funkcji, znajdują się wewnątrz nawiasów okrągłych. Argumenty to wartości, które przekazujemy do funkcji w trakcie jej wywołania
 ---
 
 **Parametry funkcji - podsumowanie:**
