Just another update

--- a/Python od podstaw/6. Funkcje.md
+++ b/Python od podstaw/6. Funkcje.md
@@ -88,7 +88,7 @@ Teraz wywołując funkcję `shoot_n_zombies` wystarczyć przekazać do niej *arg
 ---
 
 **Parametry funkcji - podsumowanie:**
-- Funkcja może (ale nie musi) przyjmować jeden lub więcej parametrów
+- Funkcja może (ale nie musi) posiadać jeden lub więcej parametrów
 - Parametry zachowują się jak zmienne, które istnieją tylko wewnątrz funkcji
 - Podczas wywoływania funkcji posiadającej parametry musimy przekazać do niej argumenty, czyli wartości przypisane do poszczególnych parametrów
 ---
@@ -96,7 +96,7 @@ Teraz wywołując funkcję `shoot_n_zombies` wystarczyć przekazać do niej *arg
 ---
 &nbsp;
 ### 6.3 Słowo kluczowe return
-Wiele funkcji nie tylko wykonuje określone instrukcje, ale również *zwraca* jedną lub więcej wartości. Oznacza to, że pewne wartości obecne wewnątrz funkcji mogą zostać przechwycone w trakcie jej wywoływania i użyte już poza funkcją. Poniżej prosty przykład:
+Wiele funkcji nie tylko wykonuje określone instrukcje, ale również *zwraca* jedną lub więcej wartości. Oznacza to, że pewne wartości obecne wewnątrz funkcji mogą zostać przechwycone po jej wywołaniu i użyte już poza funkcją. Poniżej prosty przykład:
 
 ```python
 def return_true():
@@ -126,7 +126,7 @@ print(square)
 ```
 
 
-Aby zwrócić kilka wartości należy podać je po  `return` oddzielając je przecinkiem. Funkcja zwróci wówczas tuplę tych wartości.
+Aby zwrócić kilka wartości należy podać je oddzielone przecinkiem po  `return`. Funkcja zwróci wówczas tuplę tych wartości.
 ```python
 def solve_quadratic_equation(a, b, c):
     delta = b**2 - 4*a*c
@@ -157,9 +157,13 @@ def solve_quadratic_equation(a, b, c):
     return x1, x2
 
 
-solve_quadratic_equation(1, 1, -2)
+x1, x2 = solve_quadratic_equation(1, 1, -2)
+print(x1)
+print(x2)
 
-# (-2.0, 1.0)
+
+# -2.0
+# 1.0
 ```
 
 
@@ -172,7 +176,31 @@ solve_quadratic_equation(1, 1, -2)
 ---
 &nbsp;
 ### 6.4 Parametry z wartością domyślną
+Niektóre parametry mogą mieć wartość domyślną. Oznacza to, że jeśli nie przekażemy niczego w postaci argumentu, zostanie użyta domyślna wartość. Definiujemy ją w następujący sposób:
+```python
+def calculate_distance_to_point(coordinates, reference=(0, 0)):
+    x_a, y_a = coordinates
+    x_b, y_b = reference
+    
+    return ( (x_a - x_b)**2 + (y_a - y_b)**2 )**0.5
 
+
+calculate_distance_to_point((2, 2))
+# 2.8284271247461903
+
+calculate_distance_to_point((2, 2), (0, 0))
+# 2.8284271247461903
+
+calculate_distance_to_point((2, 2), (1, 1))
+# 1.4142135623730951
+```
+
+Powyższa funkcja oblicza i zwraca odległość między dwoma punktami (tuplami) o współrzędnych x,y. Jeśli nie przekażemy do niej drugiego punktu (*reference*) to zostanie użyty tam punkt (0, 0). Jeśli przekażemy inną wartość - to ona będzie wykorzystana.
+
+**Parametry z wartością domyślną - podsumowanie:**
+- Parametr funkcji może mieć wartość domyślną - definiujemy ją w deklaracji funkcji
+- Takie parametry muszą być zadeklarowane *po* tych bez wartości domyślnej
+- Jeśli przekażemy jako argument inną wartość, zostanie ona użyta
 ---
 ---
 ---
