Just another update

--- a/Python od podstaw/6. Funkcje.md
+++ b/Python od podstaw/6. Funkcje.md
@@ -206,7 +206,50 @@ Powyższa funkcja oblicza i zwraca odległość między dwoma punktami (tuplami)
 ---
 &nbsp;
 ### 6.5 Wbudowane generatory cz. 2
+#### 6.5.1 `map`
+Funkcje mogą zostać użyte do *zmapowania* jednej sekwencji na drugą. Używamy w tym celu generatora `map`. Na początek definicja prostej funkcji oraz listy.
+```python
+def add_one(x):
+    return x + 1
 
+list_of_numbers = [1, 3, 4, 6, 6, 9]
+```
+Aby zmapować `list_of_numbers` za pomocą funkcji `add_one` - czyli utworzyć taką sekwencję, że każdy jej element otrzymujemy poprzez zastosowanie danej funkcji na kolejnych elementach listy - piszemy następujący kod:
+```python
+map(add_one, list_of_numbers)
+
+# <map at 0x7f461426a0d0>
+```
+
+Jego rezultatem jest obiekt typu `map`, który po zrzutowaniu na listę daje taką listę:
+```python
+list(map(add_one, list_of_numbers))
+
+# [2, 4, 5, 7, 7, 10]
+```
+
+Obiekt typu `map` jest iterablą a więc możemy po nim iterować.
+
+#### 6.5.2 `filter`
+Aby przefiltrować sekwencję pod kątem spełnienia przez jej elementy danego warunku logicznego można użyć generatora `filter`. Należy w tym celu napisać funkcję, która będzie zwracać wartość logiczną *True/False*:
+
+```python
+def is_even(x):
+    return x % 2 == 0
+
+filter(is_even, list_of_numbers)
+# <filter at 0x7f46142c6be0>
+
+list(filter(is_even, list_of_numbers))
+# [4, 6, 6]
+```
+
+Obiekt typu `filter` jest iterablą a więc możemy po nim iterować.
+
+**Wbudowane generatory cz. 2 - podsumowanie:**
+- Aby zmapować sekwencję używając dowolnej funkcji używamy generatora `map`
+- Aby przefiltrować sekwencję uzywając funkcji, która zwraca wartość logiczną używamy generatora `filter`
+- Obiekty typów `map` i `filter` są iterablami
 ---
 ---
 ---
