Just another update

--- a/Python od podstaw/6. Funkcje.md
+++ b/Python od podstaw/6. Funkcje.md
@@ -207,7 +207,7 @@ Powyższa funkcja oblicza i zwraca odległość między dwoma punktami (tuplami)
 &nbsp;
 ### 6.5 Wbudowane generatory cz. 2
 #### 6.5.1 `map`
-Funkcje mogą zostać użyte do *zmapowania* jednej sekwencji na drugą. Używamy w tym celu generatora `map`. Na początek definicja prostej funkcji oraz listy.
+Funkcje mogą zostać użyte do **zmapowania** jednej sekwencji na drugą. Używamy w tym celu generatora `map`. Na początek definicja prostej funkcji oraz listy.
 ```python
 def add_one(x):
     return x + 1
@@ -221,7 +221,7 @@ map(add_one, list_of_numbers)
 # <map at 0x7f461426a0d0>
 ```
 
-Jego rezultatem jest obiekt typu `map`, który po zrzutowaniu na listę daje taką listę:
+Jego rezultatem jest obiekt typu `map`, który po zrzutowaniu na `list` daje taką listę:
 ```python
 list(map(add_one, list_of_numbers))
 
@@ -231,7 +231,7 @@ list(map(add_one, list_of_numbers))
 Obiekt typu `map` jest iterablą a więc możemy po nim iterować.
 
 #### 6.5.2 `filter`
-Aby przefiltrować sekwencję pod kątem spełnienia przez jej elementy danego warunku logicznego można użyć generatora `filter`. Należy w tym celu napisać funkcję, która będzie zwracać wartość logiczną *True/False*:
+Aby przefiltrować sekwencję pod kątem spełnienia przez jej elementy danego warunku logicznego można użyć generatora `filter`. Należy w tym celu napisać funkcję, która będzie przyjmować jeden argument i zwracać wartość logiczną *True/False*:
 
 ```python
 def is_even(x):
