Just another update

--- a/Python od podstaw/6. Funkcje.md
+++ b/Python od podstaw/6. Funkcje.md
@@ -255,7 +255,33 @@ Obiekt typu `filter` jest iterablą a więc możemy po nim iterować.
 ---
 &nbsp;
 ### 6.6 lambda
+Generatory z powyższych przykładów jako jeden z argumentów przyjmują funkcję. Gdyby ta funkcja miała być wykorzystana tylko raz - w celu zmapowania lub przefiltrowania listy - może się okazać że zamiast ją definiować w klasyczny sposób wygodniej będzie skorzystać z *lambdy*. 
 
+Lambda to skrócony sposób zapisu funkcji, która musi być na tyle krótka że zwracane wyrażenie może być zapisane w jednej linijce. Funkcja służąca do mnożenia podanej wartości przez 3 wygląda następująco:
+```python
+lambda x: 3*x
+```
+
+Po słowie kluczowym `lambda` deklarujemy jeden lub więcej parametr. Następnie - po dwukropku - znajduje się zwracana wartość. 
+
+Taką funkcję możemy utworzyć jak zwykły obiekt - przypisując do zmiennej - a następnie wywołać. Zwykle jednak tego nie robimy. Inna nazwa lambdy to "funkcja anonimowa" co oznacza że nie ma ona nazwy, a jedynie przekazujemy ją jako argument do innej funkcji. 
+
+Tak wygląda przekazanie lambdy do `map` oraz `filter`:
+```python
+list_of_numbers = [1, 3, 4, 6, 6, 9]
+
+
+list(map(lambda x: x + 1, list_of_numbers))
+# [2, 4, 5, 7, 7, 10]
+
+
+list(filter(lambda x: x % 2 == 0, list_of_numbers))
+# [4, 6, 6]
+```
+
+**Lambda - podsumowanie:**
+- Kiedy chcemy przekazać funkcję jako argument dla innej funkcji możemy użyć lambdy zamiast definiować i nazywać ją jako obiekt
+- Lambda posiada jeden lub więcej parametrów (po przecinku). To co znajduje się po dwukropku jest zwracane 
 ---
 ---
 ---
