Just another update

--- a/Python od podstaw/6. Funkcje.md
+++ b/Python od podstaw/6. Funkcje.md
@@ -264,7 +264,7 @@ lambda x: 3*x
 
 Po słowie kluczowym `lambda` deklarujemy jeden lub więcej parametr. Następnie - po dwukropku - znajduje się zwracana wartość. 
 
-Taką funkcję możemy utworzyć jak zwykły obiekt - przypisując do zmiennej - a następnie wywołać. Zwykle jednak tego nie robimy. Inna nazwa lambdy to "funkcja anonimowa" co oznacza że nie ma ona nazwy, a jedynie przekazujemy ją jako argument do innej funkcji. 
+Taką funkcję możemy utworzyć jak zwykły obiekt - przypisując do zmiennej - a następnie wywołać. Zwykle jednak tego nie robimy. Inne określenie na lambdę to "funkcja anonimowa" co oznacza że nie ma ona nazwy, a jedynie przekazujemy ją jako argument do innej funkcji. 
 
 Tak wygląda przekazanie lambdy do `map` oraz `filter`:
 ```python
