Just another update

--- a/Python od podstaw/6. Funkcje.md
+++ b/Python od podstaw/6. Funkcje.md
@@ -87,10 +87,36 @@ Teraz wywołując funkcję `shoot_n_zombies` wystarczyć przekazać do niej *arg
 > Parametry to część definicji funkcji, znajdują się wewnątrz nawiasów okrągłych. Argumenty to wartości, które przekazujemy do funkcji w trakcie jej wywołania
 ---
 
+Opcjonalnie w trakcie przekazywania argumentu można użyć jego nazwy. Jest to przydatne zwłaszcza kiedy wywołujemy funkcję mającą wiele parametrów. Wówczas możemy przekazywać je w dowolnej kolejności. Jeśli natomiast nie będziemy używać ich nazw musimy zachować ich kolejność.
+
+```python
+shoot_n_zombies(n=2)
+
+# AAAAOOOUUAA!!! <gunshot>  ...
+# AAAAOOOUUAA!!! <gunshot>  ...
+```
+
+---
+Rozróżniamy dwa rodzaje argumentów ze względu na sposób przekazywania - pozycyjne (*positional arguments*) oraz nazwane (*keyword arguments*). Argumenty pozycyjne to te, które przekazujemy zachowując ich kolejność a nazwane to takie, przy których używamy nazwy parametru podczas przekazywania. Oba posoby przekazywania argumentów są dozwolone.
+
+```python
+def multi_parameter_function(a, b, c):
+    product = a * b * c
+    print(product)
+
+
+multi_parameter_function(1, 2, 3)
+# 6
+
+multi_parameter_function(a=1, b=2, c=3)
+# 6
+```
+
 **Parametry funkcji - podsumowanie:**
 - Funkcja może (ale nie musi) posiadać jeden lub więcej parametrów
 - Parametry zachowują się jak zmienne, które istnieją tylko wewnątrz funkcji
 - Podczas wywoływania funkcji posiadającej parametry musimy przekazać do niej argumenty, czyli wartości przypisane do poszczególnych parametrów
+- Argumenty mogą być pozycyjne (przekazujemy je według kolejności) albo nazwane (przekazujemy je używając nazwy parametru)
 ---
 ---
 ---
@@ -280,13 +306,56 @@ list(filter(lambda x: x % 2 == 0, list_of_numbers))
 ```
 
 **Lambda - podsumowanie:**
-- Kiedy chcemy przekazać funkcję jako argument dla innej funkcji możemy użyć lambdy zamiast definiować i nazywać ją jako obiekt
+- Kiedy chcemy przekazać funkcję jako argument dla innej funkcji możemy użyć lambdy zamiast nazywać i definiować tę funkcję jako obiekt
 - Lambda posiada jeden lub więcej parametrów (po przecinku). To co znajduje się po dwukropku jest zwracane 
 ---
 ---
 ---
 &nbsp;
 ### 6.7 arguments unpacking
+Kiedy funkcja ma kilka parametrów a wartości które chcemy do niej przekazać znajdują się w jakiejś kolekcji (np. liście lub tupli) nie musimy wyciągać ich a następnie przekazywać jako osobne argumenty. Taki zapis byłby długi i mało elegancki, tak jak w poniższym przykładzie, w którym modelujemy listę ludzi jako tuple zawierające informacje o poszczególnych ich cechach. Następnie używamy tych tupli do obliczenia ogólnego score'u:
+
+```python
+def calculate_human_score(velocity, experience, power):
+    score = velocity*1.2 + experience*2 + power*2.5
+    return score
+
+
+list_of_humans = [(2, 4, 3), (5, 3, 8), (7, 5, 5)]
+
+# score dla człowieka o indeksie 0
+calculate_human_score(
+					  list_of_humans[0][0],
+					  list_of_humans[0][1],
+					  list_of_humans[0][2]
+	)
+
+# 17.9
+```
+
+Zamiast tego można odpakować te - w tym przypadku - tuple za pomocą operatora *.
+
+```python
+calculate_human_score(*list_of_humans[0])
+
+# 17.9
+```
+
+Efekt jest taki sam jak gdyby tuplę `list_of_humans[0]` podzielić na poszczególne elementy i przekazać do funkcji jako osobne argumenty.
+
+---
+Podobny efekt można uzyskać odpakowując słownik. Klucze słownika muszą odpowiadać nazwom parametrów :
+```python
+calculate_human_score(**{"velocity": 2, "experience": 4, "power": 3})
+
+# 17.9
+```
+
+
+
+**arguments unpacking - podsumowanie:**
+- Aby rozbić listę lub tuplę na poszczególne elementy, które zostaną przekazane do funkcji jako argumenty pozycyjne należy użyć operatora *
+- Aby rozbić słownik na poszczególne pary klucz wartość, które zostaną przekazane do funkcji jako argumenty nazwane należy użyć operatora ** 
 
 ---
 ---
