Just another update

--- a/Python od podstaw/6. Funkcje.md
+++ b/Python od podstaw/6. Funkcje.md
@@ -333,7 +333,7 @@ calculate_human_score(
 # 17.9
 ```
 
-Zamiast tego można odpakować te - w tym przypadku - tuple za pomocą operatora *.
+Zamiast tego można **odpakować** tę tuplę za pomocą operatora *.
 
 ```python
 calculate_human_score(*list_of_humans[0])
@@ -362,7 +362,49 @@ calculate_human_score(**{"velocity": 2, "experience": 4, "power": 3})
 ---
 &nbsp;
 ### 6.8 args, kwargs
+Może się zdarzyć że chcemy przekazać do funkcji pewną liczbę argumentów (pozycyjnych lub nazwanych) ale określamy ile dokładnie ich będzie. W takim wypadku jest możliwe przekazać ich dowolnie dużo i trafią one do funkcji jako tupla (w przypadku argumentów pozycyjnych) lub jako słownik (w przypadku argumentów nazwanych). Definicja takiej funkcji wygląda następująco dla argumentów pozycyjnych:
 
+```python
+def calculate_average(*args):
+	# zmienna args jest tuplą
+    return sum(args) / len(args)
+```
+
+oraz dla argumentów nazwanych:
+```python
+def create_zombie_dict(**kwargs):
+    # zmienna kwargs jest słownikiem
+    return {"x": kwargs["x"], "y": kwargs["y"], "velocity": kwargs["velocity"]}
+```
+
+Nazwy `args` i `kwargs` wynikają z konwencji. Składnia języka nie wymusza dokładnie takich nazw, ale warto jest się ich trzymać. To co jest wymagane przez składnię to operatory * oraz ** w definicji funkcji.
+
+Wywołując takie funkcje możemy przekazać dowolnie dużo argumentów:
+
+```python
+zombie_1_velocity = 2
+zombie_2_velocity = 4.5
+zombie_3_velocity = 3.1
+zombie_4_velocity = 6
+
+avg_velocity = calculate_average(
+	zombie_1_velocity,
+    zombie_2_velocity,
+    zombie_3_velocity,
+    zombie_4_velocity)
+
+print(avg_velocity)
+# 3.9
+
+
+zombie_dict = create_zombie_dict(x=4.5, y=6.3, velocity=8)
+print(zombie_dict)
+# {'x': 4.5, 'y': 6.3, 'velocity': 8}
+```
+
+**`args`, `kwargs` - podsumowanie:**
+- Aby móc przekazać do funkcji dowolnie dużo argumentów pozycyjnych w definicji tej funkcji należy umieścić `*args*`. Wówczas przekazane argumenty trafią do niej w postaci tupli
+- Aby móc przekazać do funkcji dowolnie dużo argumetnów nazwanych w definicji tej funkcji należy umieścić `**kwargs`. Wówczas przekazane argumenty trafią do niej w postaci słownika
 ---
 ---
 ---
