Just another update

--- a/Python od podstaw/6. Funkcje.md
+++ b/Python od podstaw/6. Funkcje.md
@@ -54,6 +54,7 @@ shoot_five_zombies()
 # AAAAOOOUUAA!!! <gunshot>  ...
 ```
 
+---
 **Procedura - podsumowanie:**
 - Aby nie kopiować tego samego kodu za każdym razem kiedy chcemy z niego skorzystać może zamknąć go w funkcji i wywoływać ją w różnych miejscach
 - Funkcja, która nie zwraca żadnej wartości to procedura
@@ -112,6 +113,7 @@ multi_parameter_function(a=1, b=2, c=3)
 # 6
 ```
 
+---
 **Parametry funkcji - podsumowanie:**
 - Funkcja może (ale nie musi) posiadać jeden lub więcej parametrów
 - Parametry zachowują się jak zmienne, które istnieją tylko wewnątrz funkcji
@@ -192,7 +194,7 @@ print(x2)
 # 1.0
 ```
 
-
+---
 **Słowo kluczowe return - podsumowanie:**
 - Aby funkcja zwróciła jedną lub więcej wartości używamy słowa kluczowego `return`. Zwracane wartości będą mogły być użyte również poza funkcją
 - Użycie `return` kończy działanie funkcji. Najczęściej dzieje się to na samym końcu ciała funkcji
@@ -223,6 +225,7 @@ calculate_distance_to_point((2, 2), (1, 1))
 
 Powyższa funkcja oblicza i zwraca odległość między dwoma punktami (tuplami) o współrzędnych x,y. Jeśli nie przekażemy do niej drugiego punktu (*reference*) to zostanie użyty tam punkt (0, 0). Jeśli przekażemy inną wartość - to ona będzie wykorzystana.
 
+---
 **Parametry z wartością domyślną - podsumowanie:**
 - Parametr funkcji może mieć wartość domyślną - definiujemy ją w deklaracji funkcji
 - Takie parametry muszą być zadeklarowane *po* tych bez wartości domyślnej
@@ -272,6 +275,7 @@ list(filter(is_even, list_of_numbers))
 
 Obiekt typu `filter` jest iterablą a więc możemy po nim iterować.
 
+---
 **Wbudowane generatory cz. 2 - podsumowanie:**
 - Aby zmapować sekwencję używając dowolnej funkcji używamy generatora `map`
 - Aby przefiltrować sekwencję uzywając funkcji, która zwraca wartość logiczną używamy generatora `filter`
@@ -305,6 +309,7 @@ list(filter(lambda x: x % 2 == 0, list_of_numbers))
 # [4, 6, 6]
 ```
 
+---
 **Lambda - podsumowanie:**
 - Kiedy chcemy przekazać funkcję jako argument dla innej funkcji możemy użyć lambdy zamiast nazywać i definiować tę funkcję jako obiekt
 - Lambda posiada jeden lub więcej parametrów (po przecinku). To co znajduje się po dwukropku jest zwracane 
@@ -351,8 +356,7 @@ calculate_human_score(**{"velocity": 2, "experience": 4, "power": 3})
 # 17.9
 ```
 
-
-
+---
 **arguments unpacking - podsumowanie:**
 - Aby rozbić listę lub tuplę na poszczególne elementy, które zostaną przekazane do funkcji jako argumenty pozycyjne należy użyć operatora *
 - Aby rozbić słownik na poszczególne pary klucz wartość, które zostaną przekazane do funkcji jako argumenty nazwane należy użyć operatora ** 
@@ -391,7 +395,8 @@ avg_velocity = calculate_average(
 	zombie_1_velocity,
     zombie_2_velocity,
     zombie_3_velocity,
-    zombie_4_velocity)
+    zombie_4_velocity
+    )
 
 print(avg_velocity)
 # 3.9
@@ -402,6 +407,7 @@ print(zombie_dict)
 # {'x': 4.5, 'y': 6.3, 'velocity': 8}
 ```
 
+---
 **`args`, `kwargs` - podsumowanie:**
 - Aby móc przekazać do funkcji dowolnie dużo argumentów pozycyjnych w definicji tej funkcji należy umieścić `*args*`. Wówczas przekazane argumenty trafią do niej w postaci tupli
 - Aby móc przekazać do funkcji dowolnie dużo argumetnów nazwanych w definicji tej funkcji należy umieścić `**kwargs`. Wówczas przekazane argumenty trafią do niej w postaci słownika
@@ -410,7 +416,81 @@ print(zombie_dict)
 ---
 &nbsp;
 ### 6.9 Kolejność parametrów
+#### 6.9.1 Kolejność przekazywania
+Kiedy przekazujemy do funkcji argumenty pozycyjne ich kolejność musi być zgodna z tą w jakiej zostały one zadeklarowane. Jeśli jednak użyjemy argumentów nazwanych nie musimy trzymać się tej kolejności. Poniżej znajduje się prosty przykład:
 
+```python
+def determine_winner(human_power, zombie_power):
+    if human_power > zombie_power:
+        return 1
+    elif human_power < zombie_power:
+        return -1
+    else:
+        return 0
+
+
+determine_winner(2, 1)  # argumenty pozycyjne
+# 1
+
+determine_winner(1, 1)  # argumenty pozycyjne
+# 0
+
+determine_winner(2, 3)  # argumenty pozycyjne
+# -1
+
+
+determine_winner(zombie_power=3, human_power=2)  # argumenty nazwane
+# -1
+```
+
+
+#### 6.9.2 Kolejność definiowania
+Podczas definiowania parametrów funkcji istnieje kilka reguł mówiących o tym jaka powinna być ich kolejność.
+
+1. **Argumenty z wartością domyślną deklarujemy po zwykłych**
+
+**Poprawna** definicja funkcji:
+```python
+def calculate_distance_to_point(coordinates, reference=(0, 0)):
+    x_a, y_a = coordinates
+    x_b, y_b = reference
+    
+    return ( (x_a - x_b)**2 + (y_a - y_b)**2 )**0.5
+```
+
+
+**Niepoprawna** definicja funkcji:
+```python
+def calculate_distance_to_point(reference=(0, 0), coordinates):
+    x_a, y_a = coordinates
+    x_b, y_b = reference
+    
+    return ( (x_a - x_b)**2 + (y_a - y_b)**2 )**0.5
+```
+
+2. **\*args i \*\*kwargs deklarujemy na końcu**
+```python
+def function(x, *args, **kwargs):
+    print(x)
+    
+    print(args[0])
+    print(args[1])
+    
+    print(kwargs["a"])
+    print(kwargs["b"])
+
+
+function(1, 10, 20, 30, a=100, b=200)
+# 1
+# 10
+# 20
+# 100
+# 200
+```
+
+---
+**Kolejność parametrów - podsumowanie:**
+- ...
 ---
 ---
 ---
