Just another update

--- a/Python od podstaw/5. Pętle.md
+++ b/Python od podstaw/5. Pętle.md
@@ -318,6 +318,7 @@ for i in range(2):
 
 W ten sposób możemy połączyć elementy obu iterabli na zasadzie "każdy z każdym" i wykonać na takich parach zestaw operacji - w powyższym przykładzie przemnożenie ich przez siebie.
 
+---
 **Zagnieżdżone pętle - podsumowanie:**
 - Wewnątrz jednej pętli może znajdować się kolejna (a w niej kolejna itd.)
 ---
@@ -373,8 +374,8 @@ for h, power in enumerate(humans_power):
 # Człowiek nr 2 ma siłę równą 10
 ```
 
-
-`zip` i `enumerate` w pętli `for` - podsumowanie:
+---
+**`zip` i `enumerate` w pętli `for` - podsumowanie:**
 - Aby przeiterować po kilku iterablach jednocześnie używamy do funkcji `zip`
 - Aby w pętli `for` móc korzystać z licznika iteracji należy przekazać iterablę do funkcji `enumerate`
 ---
@@ -420,6 +421,7 @@ print(sum_of_experience)
 # 9
 ```
 
+---
 ***list comprehension* - podsumowanie:**
 - Aby w jednej linijce utworzyć listę posługując się do tego pętlą możemy użyć *list comprehension*
 - Elementem *list comprehension* może być instrukcja warunkowa
