Just another update

--- a/Python od podstaw/5. Pętle.md
+++ b/Python od podstaw/5. Pętle.md
@@ -216,7 +216,7 @@ while number_of_humans > 0 and number_of_zombies > 0:
 ```
 
 ---
-Pętla `while` - podsumowanie:
+**Pętla `while` - podsumowanie:**
 - Pętla `while` wykonuje się tak długo jak spełniony jest warunek w niej podany
 - Jeżeli warunek będzie zawsze prawdziwy pętla będzie wykonywać się w nieskończoność
 ---
@@ -292,7 +292,7 @@ for zombie_power in zombies_power:
 ```
 
 ---
-Instrukcje `break` oraz `continue` - podsumowanie:
+**Instrukcje `break` oraz `continue` - podsumowanie:**
 - Aby wyjść z pętli w dowolnym jej miejscu używamy instrukcji `break`
 - Aby przejść do kolejnej iteracji używamy instrukcji `continue`
 ---
