--- a/Python od podstaw/6. Funkcje.md
+++ b/Python od podstaw/6. Funkcje.md
@@ -357,7 +357,7 @@ calculate_human_score(**{"velocity": 2, "experience": 4, "power": 3})
 ```
 
 ---
-**arguments unpacking - podsumowanie:**
+***arguments unpacking* - podsumowanie:**
 - Aby rozbić listę lub tuplę na poszczególne elementy, które zostaną przekazane do funkcji jako argumenty pozycyjne należy użyć operatora *
 - Aby rozbić słownik na poszczególne pary klucz wartość, które zostaną przekazane do funkcji jako argumenty nazwane należy użyć operatora ** 
 
@@ -445,33 +445,17 @@ determine_winner(zombie_power=3, human_power=2)  # argumenty nazwane
 
 
 #### 6.9.2 Kolejność definiowania
-Podczas definiowania parametrów funkcji istnieje kilka reguł mówiących o tym jaka powinna być ich kolejność.
+Podczas definiowania parametrów funkcji należy trzymać się następującej kolejności:
+- zwykłe parametry
+- *args
+- parametry z wartością domyślną
+- **kwargs
 
-1. **Argumenty z wartością domyślną deklarujemy po zwykłych**
-
-**Poprawna** definicja funkcji:
+Przykład:
 ```python
-def calculate_distance_to_point(coordinates, reference=(0, 0)):
-    x_a, y_a = coordinates
-    x_b, y_b = reference
-    
-    return ( (x_a - x_b)**2 + (y_a - y_b)**2 )**0.5
-```
-
-
-**Niepoprawna** definicja funkcji:
-```python
-def calculate_distance_to_point(reference=(0, 0), coordinates):
-    x_a, y_a = coordinates
-    x_b, y_b = reference
-    
-    return ( (x_a - x_b)**2 + (y_a - y_b)**2 )**0.5
-```
-
-2. **\*args i \*\*kwargs deklarujemy na końcu**
-```python
-def function(x, *args, **kwargs):
+def function(x, *args, y=2, **kwargs):
     print(x)
+    print(y)
     
     print(args[0])
     print(args[1])
@@ -479,9 +463,9 @@ def function(x, *args, **kwargs):
     print(kwargs["a"])
     print(kwargs["b"])
 
-
 function(1, 10, 20, 30, a=100, b=200)
 # 1
+# 2
 # 10
 # 20
 # 100
@@ -490,7 +474,8 @@ function(1, 10, 20, 30, a=100, b=200)
 
 ---
 **Kolejność parametrów - podsumowanie:**
-- ...
+- Przekazując argumenty pozycyjne należy trzymać się takiej kolejności jaka jest w definicji funkcji. Podczas przekazywania argumentów nazwanych kolejność jest dowolna
+- Kolejność definiowania parametrów jest następująca: zwykłe parametry, *args, parametry z wartością domyślną, **kwargs 
 ---
 ---
 ---
