Just another update

--- a/Python od podstaw/6. Funkcje.md
+++ b/Python od podstaw/6. Funkcje.md
@@ -481,7 +481,96 @@ function(1, 10, 20, 30, a=100, b=200)
 ---
 &nbsp;
 ### 6.10 Docstring i doctest
+Funkcje mogą - i w praktyce zwykle powinny - posiadać tzw. *docstringi* czyli krótki opis tego co funkcja robi, jakie przyjmuje argumenty oraz co zwraca. Podczas czytania kodu pozwala się to szybko zorientować co dokładnie robią poszczególne funkcje - głównie przez pryzmat tego co przyjmują na wejściu i co zwracają na wyjściu.
+Możemy też w docstringu zawrzeć *doctest* czyli odpowiednio sformatowany test wywołania funkcji sprawdzający czy zwracane wartości dla przykładowych inputów są zgodne z oczekiwaniami.
 
+#### 6.10.1 Docstring
+W jednym z powyższych przykładów zdefiniowana została następująca funkcja:
+```python
+def determine_winner(human_power, zombie_power):
+    if human_power > zombie_power:
+        return 1
+    elif human_power < zombie_power:
+        return -1
+    else:
+        return 0
+```
+
+Jest ona dosyć prosta, więc łatwo zorientować się w tym co ona robi, ale nie zawsze jest to takie oczywiste. Dlatego warto umieszczać w funkcjach docstringa, np. w takiej postaci:
+
+```python
+def determine_winner(human_power, zombie_power):
+    """
+    This function takes human power and zombie power as inputs,
+    compares them and returns information about the battle result
+    
+    Args:
+        human_power (float): power of a human
+        zombie_power (float): power of a zombie
+    
+    Returns:
+        (int): result of the battle where 1 is human's victory,
+               -1 is zombie's victory and 0 is a draw
+    """
+    
+    if human_power > zombie_power:
+        return 1
+    elif human_power < zombie_power:
+        return -1
+    else:
+        return 0
+```
+
+Całość znajduje się w potrójnych apostrofach lub cudzysłowach. Jest to po prostu wielolinijkowy string, którego nie przypisujemy do żadnej zmiennej. Na początku znajduje się krótki opis tego co robi funkcja, następnie podajemy wszystkie parametry wraz z ich typami oraz opisem a na końcu podobny opis dla wartości zwracanych.
+
+Istnieją różne formaty docstringów. Powyższy jest jednym z najczęściej wykorzystywanych i nazywany jest formatem Google, ponieważ proponuje go [styleguide od Google'a](https://google.github.io/styleguide/pyguide.html).
+
+#### 6.10.2 Doctest
+W docstringu może znajdować się jeden lub więcej doctestów. Ich definicja wygląda tak jak w poniższym przykładzie. Składa się na nią wywołanie funkcji oraz oczekiwany output:
+```python
+def determine_winner(human_power, zombie_power):
+    """
+    This function takes human power and zombie power as inputs,
+    compares them and returns information about the battle result
+    
+    Args:
+        human_power (float): power of a human
+        zombie_power (float): power of a zombie
+    
+    Returns:
+        (int): result of the battle where 1 is human's victory,
+               -1 is zombie's victory and 0 is a draw
+               
+    >>> determine_winner(2, 1)
+    1
+    
+    >>> determine_winner(1, 2)
+    -1
+    
+    >>> determine_winner(1, 1)
+    0
+    """
+    
+    if human_power > zombie_power:
+        return 1
+    elif human_power < zombie_power:
+        return -1
+    else:
+        return 0
+```
+
+Aby wykonać doctesty, pod funkcją powinien znajdować się następujący kod:
+```python
+from doctest import testmod
+testmod()
+```
+
+Jest w tym celu potrzebny import funkcji `testmod` z biblioteki `doctest`. WIęcej na temat importów w lekcji [[8. Moduły]].
+
+---
+**Docstring i doctest - podsumowanie:**
+- Każda funkcja może i powinna być udokumentowana za pomocą docstringa. Zawiera on informacje o tym co robi dana funkcja, jakie ma parametry i co zwraca
+- Docstring może zawierać również doctesty. Znajdują się w nich przykładowe wywołania funkcji wraz z oczekiwanym outputem
 ---
 ---
 ---
