Just another update

--- a/Python od podstaw/6. Funkcje.md
+++ b/Python od podstaw/6. Funkcje.md
@@ -576,6 +576,15 @@ Jest w tym celu potrzebny import funkcji `testmod` z biblioteki `doctest`. WIęc
 ---
 &nbsp;
 ### 6.11 Zakres przestrzeni nazw
+Na początek należy wprowadzić kilka definicji:
+
+***namespace*** - mapowanie między nazwami a obiektami w pamięci
+***scope*** - część programu, w którym obowiązuje dany namespace
+***built-in scope*** - scope, który obejmuje wszystkie nazwy wbudowane takie jak *print* czy *type*
+***global scope*** - scope, który obejmuje wszystkie nazwy, które obowiązują w ramach jednego pliku. Każdy plik ma swój *global scope*
+***local scope*** - scope, który obejmuje wszystkie nazwy, które obowiązują w ramach jednej funkcji czy [[10. Programowanie obiektowe#10.1 Klasa oraz obiekt|klasy]]. Każda funkcja i klasa ma swój *local scope*
+
+![[scopes.png]]
 
 ---
 ---
