Just another update

--- a/Python od podstaw/6. Funkcje.md
+++ b/Python od podstaw/6. Funkcje.md
@@ -588,5 +588,133 @@ Na początek należy wprowadzić kilka definicji:
 
 ---
 ---
+Istnieje cały szereg reguł dotyczących tego jakie argumenty czy zmienne są widoczne w poszczególnych scope'ach.
+
+**1. Wewnątrz funkcji mamy dostęp do obiektów przekazanych jako argument. Trafiają 
+one do scope'u lokalnego**
+W taki właśnie sposób używaliśmy funkcji do tej pory - argumenty były przekazywane do scope'u lokalnego i tam używane.
+
+```python
+foo = 1  
+
+def bar(buz):
+    print(buz)
+
+bar(foo)
+# 1
+```
+
+---
+**2. Wewnątrz funkcji mamy również dostęp do obiektów ze scope'u globalnego nie przekazanych jako argument**
+Nadużywanie tego nie jest dobrą praktyką, bo korzystając z parametrów funkcji możemy jawnie przekazywać do niej poszczególne wartości w postaci argumentów. Python pozwala jednak na używanie w funkcji zmiennych, które nie zostały przekazane jako argument.
+```python
+foo = 1
+
+def bar():
+    print(foo)
+
+bar()
+# 1
+```
+
+---
+**3. W scopie lokalnym nie możemy używać zmiennych globalnych których nazwy zostały zadeklarowane również lokalnie, ale nie przypisano do nich jeszcze żadnej wartości**
+W tym przykładzie w pierwszej linii ciała funkcji używamy zmiennej globalnej `foo` aby przypisać wartość do innej zmiennej (również nazwanej `foo`). Wartość `foo` mogłaby zostać wzięta ze scope'u globalnego, ale pierwszeństwo ma scope lokalny, w którym zmienna `foo` się znajduje (jest definiowana w tej samej pierwszej linijce). Efekt jest taki, że próbujemy użyć zmiennej, która znajduje się w scopie lokalnym, ale w trakcie wykonywania tej linii kodu nie posiada jeszcze wartości.
+
+```python
+foo = 1
+
+def bar():
+    foo = foo + 1
+    print(foo)
+
+bar()
+
+# !!! Próba wywołania funkcji bar() spowoduje błąd !!!
+```
+
+Jeśli jednak przekażemy do funkcji argument, to w scopie lokalnym znajdzie się zmienna, do której przypisana jest pewna wartość. Możemy więc jej używać.
+
+```python
+foo = 1
+
+def bar(foo):
+    foo = foo + 1
+    print(foo)
+
+bar(foo)
+# 2
+```
+
+---
+**4. Aby móc używać w scopie lokalnym zmiennych ze scope'u globalnego o takiej samej nazwie jak zmienna w scopie lokalnym należy zadeklarować że dana zmienna jest globalna**
+Taka deklaracja odbywa się z użycie słowa kluczowego `global`:
+```python
+foo = 1
+
+def bar():
+    global foo
+    foo = foo + 1
+    print(foo)
+
+bar()
+# 2
+```
+
+Takie podejście zamiast przekazywania argumentów zwykle jest złą praktyką.
+
+---
+**5. Operacje modyfikacji obiektów mutowalnych z globalnego scope'u mogą być wykonywane wewnątrz funkcji. Wprowadzone zmiany dotyczą obiektu ze scope'u globalnego więc są obecne również poza funkcją**
+
+```python
+baz = [1, 2, 3]
+
+def func():
+    baz.append(4)
+    print(baz)
+    
+func()
+print(baz)
+
+# [1, 2, 3, 4]
+# [1, 2, 3, 4]
+```
+Takie zachowanie obiektów mutowalnych nie zawsze jest oczekiwane, dlatego warto mieć tego świadomość.
+
+---
+**6. Możemy nadpisywać nazwy z zewnętrznych scope'ów ale nadpisywanie nazw z built-in scope zwykle nie jest dobrym pomysłem**
+```python
+foo = 1
+
+def func():
+    foo = 2
+    print = 3
+    
+    print(foo + print)
+
+func()
+
+# !!! Próba wywołania funkcji func() spowoduje błąd, ponieważ operacja wyprintowania w ostatniej linii funkcji odwołuje się do zmiennej print równej 3 a nie funkcji wbudowanej print() !!!
+```
+
+---
+---
+>Wewnątrz funkcji raczej nie powinniśmy korzystać z zewnętrznych zmiennych nie przekazanych jako argument. 
+
+>Modyfikowanie obiektów wewnątrz funkcji również nie jest dobrą praktyką. Jeśli wykonujemy jakieś modyfikacje obiektu mutowalnego powinniśmy zwrócić ten obiekt przez funkcję a następnie go przechwycić.
+
+---
+
+**Zakres przestrzeni nazw - podsumowanie:**
+- Istnieją 3 rodzaje scope'ów - wbudowany, globalny oraz lokalny
+- Wewnątrz funkcji mamy dostęp do obiektów przekazanych jako argument. Trafiają 
+one do scope'u lokalnego
+-  Wewnątrz funkcji mamy również dostęp do obiektów ze scope'u globalnego nie przekazanych jako argument
+- W scopie lokalnym nie możemy używać zmiennych globalnych których nazwy zostały zadeklarowane również lokalnie, ale nie przypisano do nich jeszcze żadnej wartości
+- Aby móc używać w scopie lokalnym zmiennych ze scope'u globalnego o takiej samej nazwie jak zmienna w scopie lokalnym należy zadeklarować że dana zmienna jest globalna
+- Operacje modyfikacji obiektów mutowalnych z globalnego scope'u mogą być wykonywane wewnątrz funkcji. Wprowadzone zmiany dotyczą obiektu ze scope'u globalnego więc są obecne również poza funkcją
+- Możemy nadpisywać nazwy z zewnętrznych scope'ów ale nadpisywanie nazw z built-in scope zwykle nie jest dobrym pomysłem
+---
+---
 ---
 &nbsp;
