Just another update

--- a/Python od podstaw/6. Funkcje.md
+++ b/Python od podstaw/6. Funkcje.md
@@ -588,7 +588,7 @@ Na początek należy wprowadzić kilka definicji:
 
 ---
 ---
-Istnieje cały szereg reguł dotyczących tego jakie argumenty czy zmienne są widoczne w poszczególnych scope'ach.
+Istnieje cały szereg reguł dotyczących tego jakie zmienne są widoczne w poszczególnych scope'ach.
 
 **1. Wewnątrz funkcji mamy dostęp do obiektów przekazanych jako argument. Trafiają 
 one do scope'u lokalnego**
@@ -606,7 +606,7 @@ bar(foo)
 
 ---
 **2. Wewnątrz funkcji mamy również dostęp do obiektów ze scope'u globalnego nie przekazanych jako argument**
-Nadużywanie tego nie jest dobrą praktyką, bo korzystając z parametrów funkcji możemy jawnie przekazywać do niej poszczególne wartości w postaci argumentów. Python pozwala jednak na używanie w funkcji zmiennych, które nie zostały przekazane jako argument.
+Nadużywanie tego nie jest dobrą praktyką, bo korzystając z parametrów funkcji możemy jawnie przekazywać do niej poszczególne wartości w postaci argumentów. Python pozwala jednak na używanie w funkcjach zmiennych, które nie zostały przekazane jako argument.
 ```python
 foo = 1
 
@@ -694,7 +694,9 @@ def func():
 
 func()
 
-# !!! Próba wywołania funkcji func() spowoduje błąd, ponieważ operacja wyprintowania w ostatniej linii funkcji odwołuje się do zmiennej print równej 3 a nie funkcji wbudowanej print() !!!
+# !!! Próba wywołania funkcji func() spowoduje błąd
+# Operacja wyprintowania w ostatniej linii funkcji odwołuje się
+# do zmiennej print równej 3 a nie funkcji wbudowanej print() !!!
 ```
 
 ---
