Just another update

--- a/Python od podstaw/6. Funkcje.md
+++ b/Python od podstaw/6. Funkcje.md
@@ -696,7 +696,7 @@ func()
 
 # !!! Próba wywołania funkcji func() spowoduje błąd
 # Operacja wyprintowania w ostatniej linii funkcji odwołuje się
-# do zmiennej print równej 3 a nie funkcji wbudowanej print() !!!
+# do zmiennej print równej 3 a nie do funkcji wbudowanej print() !!!
 ```
 
 ---
